<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="TP3"
        app:titleTextColor="@android:color/white"
        />

    <!-- Texte princpale -->
    <TextView
        android:id="@+id/tvTitleAdresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saisie_adresse"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <!-- Champs Numero -->
    <TextView
        android:id="@+id/labelNumeroEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_ro"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleAdresse"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/etNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/entrer_le_num_ro"
        app:layout_constraintBaseline_toBaselineOf="@+id/labelNumeroEdit"
        app:layout_constraintStart_toEndOf="@+id/labelNumeroEdit"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />


    <!-- Champs Rue -->
    <TextView
        android:id="@+id/labelRueEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrer_la_rue"
        app:layout_constraintTop_toBottomOf="@+id/etNumero"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/etRue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/entrer_le_nom"
        app:layout_constraintBaseline_toBaselineOf="@+id/labelRueEdit"
        app:layout_constraintStart_toEndOf="@+id/labelRueEdit"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- Champs CP -->
    <TextView
        android:id="@+id/labelCPEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code_postale"
        app:layout_constraintTop_toBottomOf="@+id/etRue"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/etCodePostal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/entrer_le_code_postale"
        app:layout_constraintBaseline_toBaselineOf="@+id/labelCPEdit"
        app:layout_constraintStart_toEndOf="@+id/labelCPEdit"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- Champs Ville -->
    <TextView
        android:id="@+id/labelVilleEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ville"
        app:layout_constraintTop_toBottomOf="@+id/etCodePostal"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/etVille"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/entrer_la_ville"
        app:layout_constraintBaseline_toBaselineOf="@+id/labelVilleEdit"
        app:layout_constraintStart_toEndOf="@+id/labelVilleEdit"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- Les Boutons -->
    <LinearLayout
        android:id="@+id/layoutButtonsAdresse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etVille">

        <Button
            android:id="@+id/btnAnnulerAdresse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/purple_700"
            android:text="@string/cancel"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnValiderAdresse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_700"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:layout_marginStart="16dp"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>