<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="TP3"
        app:titleTextColor="@android:color/white"
        />

    <!-- Texte princpale -->
    <TextView
        android:id="@+id/tvTitleIdentite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saisie_identite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <!-- Champs Nom -->
    <TextView
        android:id="@+id/labelNomEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleIdentite"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp" />

    <EditText
        android:id="@+id/etNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/entrer_le_nom"
        app:layout_constraintBaseline_toBaselineOf="@+id/labelNomEdit"
        app:layout_constraintStart_toEndOf="@+id/labelNomEdit"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />


    <!-- Champs Prénom -->
    <TextView
        android:id="@+id/labelPrenomEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pr_nom"
        app:layout_constraintTop_toBottomOf="@+id/etNom"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/etPrenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/entrer_le_nom"
        app:layout_constraintBaseline_toBaselineOf="@+id/labelPrenomEdit"
        app:layout_constraintStart_toEndOf="@+id/labelPrenomEdit"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- Champs Téléphone -->
    <TextView
        android:id="@+id/labelTelEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t_l_phone"
        app:layout_constraintTop_toBottomOf="@+id/etPrenom"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/etTelephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/entrer_le_t_l_phone"
        app:layout_constraintBaseline_toBaselineOf="@+id/labelTelEdit"
        app:layout_constraintStart_toEndOf="@+id/labelPrenomEdit"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- Les Boutons -->
    <LinearLayout
        android:id="@+id/layoutButtonsIdentite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTelephone">

        <Button
            android:id="@+id/btnAnnulerIdentite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/purple_700"
            android:text="@string/cancel"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnValiderIdentite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_700"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:layout_marginStart="16dp"
            />




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>